--- a/xprof/interval.h.erb
+++ b/xprof/interval.h.erb
@@ -54,7 +54,8 @@ struct <%= namespace %>_dispatch {
     bt_stream *stream;
     bt_event_class *host_event_class;
     bt_event_class *device_event_class;
-
+    bt_event_class *traffic_event_class;
+    
     /* Component's input port (weak) */
     bt_self_component_port_input *in_port;
 };
