--- a/xprof/interval.c.erb
+++ b/xprof/interval.c.erb
@@ -146,6 +146,35 @@ bt_event_class* create_device_event_class_message(bt_trace_class *trace_class, b
 
     return event_class;
 }
+
+bt_event_class* create_traffic_event_class_message(bt_trace_class *trace_class, bt_stream_class *stream_class)
+{
+    bt_event_class *event_class = bt_event_class_create(stream_class);
+    bt_event_class_set_name(event_class, "lttng:traffic");
+
+    // No need to set the common field,
+    // Already set by `create_host_event_class_message`
+
+    /* Payload */
+    bt_field_class *payload_field_class = bt_field_class_structure_create(trace_class);
+
+    // Name
+    bt_field_class *name_field_class = bt_field_class_string_create(trace_class);
+    bt_field_class_structure_append_member(payload_field_class, "name", name_field_class);
+
+    // Duration
+    bt_field_class *size_field_class = bt_field_class_integer_unsigned_create(trace_class);
+    bt_field_class_structure_append_member(payload_field_class, "size", size_field_class);
+
+
+    // Put the ref and clean
+    bt_event_class_set_payload_field_class(event_class, payload_field_class);
+    bt_field_class_put_ref(payload_field_class);
+    bt_field_class_put_ref(name_field_class);
+    bt_field_class_put_ref(size_field_class);
+
+    return event_class;
+}
 /*
  * Initializes the filter component.
  */
@@ -192,7 +221,7 @@ bt_component_class_initialize_method_status <%= namespace %>_dispatch_initialize
     // We don't create a clock, because we ensure monotonic order for the downstream messages. 
     dispatch->host_event_class = create_host_event_class_message(trace_class,stream_class);
     dispatch->device_event_class = create_device_event_class_message(trace_class, stream_class);
-
+    dispatch->traffic_event_class = create_traffic_event_class_message(trace_class, stream_class);
     /* Create a default trace from (instance of `trace_class`) */
     bt_trace *trace = bt_trace_create(trace_class);
 
