--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -284,9 +284,9 @@ static void clinterval_<%= dbt_event.name %>_callback(
     } else {
         const thread_id_t thread_id = borrow_thread_id(bt_evt);
         const auto [function_name, ts] = state->profiled_function_name_and_ts[hpt_t(hostname,process_id,thread_id)];
-        const auto [device,subdevice] = state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id, function_name)];
-
-        const hp_device_t hp_device{hostname, process_id, device};
+        
+        //const auto [device,subdevice] = state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id, function_name)];
+        //const hp_device_t hp_device{hostname, process_id, device};
         //const uint64_t start_event = state->device_ts_to_llng_ts.count(hp_device) ? state->device_ts_to_llng_ts[hp_device] + start:  ts + (start - queued);
         const uint64_t start_event = ts + (start - queued);
 
